Bug 1595425 - Don't flush layout when setting empty string on Chrome. r=masayuki

This is a regression by bug 1568996. Although editor uses nsFrameSelection to
move caret, if frame is dirty, nsFrameSelection returns error.
So by bug 1568996, we flush layout before calling nsFrameSelection. But we
should stop flushing layout when we don't use nsFrameSelection.

Differential Revision: https://phabricator.services.mozilla.com/D53919

--HG--
extra : moz-landing-system : lando